# GameObjectComponent

./: .gitignore  CMakeLists.txt  ConsoleApplication13.cpp  ConsoleApplication13.sln  ConsoleApplication13.vcxproj  ConsoleApplication13.vcxproj.filters  build.bat
Core/Object/: Component.h  GameObject.cpp  GameObject.h
Core/Reflection/: PropertyMeta.cpp  PropertyMeta.h
Core/Tag/: GameTags.cpp  GameTags.h  GameplayTag.h
Core/TaskFlow/: TaskFlow.h
Core/Threading/: ThreadPool.h
Core/Types/: CoreTypes.h
Engine/Components/: ChildObjectComponent.cpp  ChildObjectComponent.h  ColliderComponent.cpp  ColliderComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderComponent.cpp  RenderComponent.h  ScriptComponent.cpp  ScriptComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Physics/: CollisionSystem.cpp  CollisionSystem.h  DynamicAABBTree.h
Engine/Profiling/: PerfettoTracer.cpp  PerfettoTracer.h
Engine/Scene/: AsyncSceneOperation.h  Scene.cpp  Scene.h  SceneBuilder.h  SceneManager.h
Engine/Scene/Builders/: GameLevelBuilder.h  LoadingBuilder.h  MainMenuBuilder.h  UIOverlayBuilder.h
Tests/: FrameworkTests.h
